# synapse-orchestrator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codecov.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml
docs/: index.html
examples/: fan_out_fan_in.py  observability_example.py  parallel_vs_sequential.py
python/: README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
python/synapse/: __init__.py  dependency_analyzer.py  executor.py  observability.py  orchestrator.py  planner.py
python/synapse/integrations/: __init__.py  anthropic.py  crewai.py  langchain.py  llamaindex.py  openai.py
python/tests/: test_crewai_integration.py  test_dependency_analyzer.py  test_executor.py  test_integrations.py  test_langchain_integration.py  test_llamaindex_integration.py  test_observability.py  test_orchestrator.py  test_planner.py
typescript/: package-lock.json  package.json  tsconfig.json
typescript/examples/: fan_out_fan_in.ts  parallel_vs_sequential.ts
typescript/src/: dependencyAnalyzer.ts  executor.ts  index.ts  observability.ts  orchestrator.ts  planner.ts
typescript/src/integrations/: anthropic.ts  index.ts  openai.ts
